more html work. Header and footer added. still need to fix spacing

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ ul {
     margin: 0;
     list-style-type: none;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     padding-left: 15px;
     color: #000;
     opacity: 0.75;
@@ -51,3 +51,34 @@ button {
 
 }
 
+.footer {
+    background: #f2f2f2;
+    line-height: 40px;
+    min-width: 980px;
+    border-top: 1px solid #e4e4e4;
+    bottom: 0;
+    height: 35px;
+    position: fixed;
+    width: 100%;
+    margin-block-end: 0;
+}
+
+.header {
+    margin-top: 20px;
+    margin-bottom: 90px;
+    align-items: center;
+}
+
+.right {
+    float: right;
+    text-align: right;
+}
+
+.left {
+    float: left;
+    text-align: left;
+}
+
+li {
+    display: inline;
+}
